--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- Root layout: ConstraintLayout serves as the base layout for other components -->
+<androidx.constraintlayout.widget.ConstraintLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -8,15 +10,18 @@
     android:background="@color/white"
     tools:context=".Activity.IntroActivity">
 
+    <!-- ScrollView allows vertical scrolling for the content inside -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- LinearLayout to hold ImageView and TextViews vertically -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- ImageView to display an introduction image or button image -->
             <ImageView
                 android:id="@+id/introBtn"
                 android:layout_width="404dp"
@@ -24,6 +29,7 @@
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/intro_pic" />
 
+            <!-- Title TextView: displays an introductory title centered with bold styling -->
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
@@ -34,6 +40,7 @@
                 android:textSize="39sp"
                 android:textStyle="bold" />
 
+            <!-- Subtitle TextView: displays a subheading below the title, centered and smaller in size -->
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
