Implement ScrollView to enable vertical scrolling for intro content.

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -9,7 +9,8 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     tools:context=".Activity.IntroActivity">
-    <!-- ScrollView allows vertical scrolling for the content inside -->
+
+    <!-- Enable scrolling for the intro content -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
