S572529 - Updated with Additional layout sections

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,7 @@
             
             <!-- End of Banner image with slider -->
             
-            <!-- Additional sections like RecyclerView and Popular Destination can follow here -->
+            <!-- Additional layout sections for RecyclerView and Popular Destination -->
         </LinearLayout>
     </ScrollView>
 
