--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Main layout container using ConstraintLayout -->
-<androidx.constraintlayout.widget.ConstraintLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -10,24 +8,22 @@
     android:background="@color/white"
     tools:context=".Activity.IntroActivity">
 
-    <!-- Enable leela krishna scrolling for the intro content -->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- LinearLayout to hold ImageView and TextViews vertically -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-             <!-- Introductory image displayed prominently -->
+
             <ImageView
                 android:id="@+id/introBtn"
                 android:layout_width="404dp"
                 android:layout_height="733dp"
                 android:scaleType="centerCrop"
                 app:srcCompat="@drawable/intro_pic" />
-            <!-- Main title with bold and centered style -->
+
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
@@ -37,7 +33,7 @@
                 android:textColor="@color/darkBlue"
                 android:textSize="39sp"
                 android:textStyle="bold" />
-            <!-- Subtitle for additional context below the title -->
+
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
