--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,4 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="navigation_view">
 
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_booking"
+            android:icon="@drawable/bookingicon"
+            android:title="Bookings"/>
+        <item
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/profileicon"
+            android:title="Profile" />
+        <item
+            android:id="@+id/nav_notification"
+            android:icon="@drawable/notificationicon"
+            android:title="Notification" />
+        <item
+            android:id="@+id/nav_preference"
+            android:icon="@drawable/preferences"
+            android:title="Preferences" />
+        <item
+            android:id="@+id/nav_support"
+            android:icon="@drawable/support_icon"
+            android:title="Support" />
+    </group>
 </menu>
